<resources>

    <string name="app_name">MetaManager</string>
    <string name="directory">Environment.getExternalStorageDirectory() + "/" + "Builds"</string>

    <!-- ACTION BAR TITLES -->
    <string name="actionbar_game_list">Games</string>
    <string name="actionbar_champion_list">Champions</string>
    <string name="actionbar_role_list">Role</string>
    <string name="actionbar_custom_build">Custom Build</string>


    <!-- NAVIGATION MENU -->
    <string name="navigation_home">Home</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_favorites">Favorites</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_tutorial">Tutorial</string>
    <string name="navigation_about">About</string>


    <!-- GAME LIST -->
    <string name="default_game_name">Default Game Name</string>


    <!-- ABOUT PAGE -->
    <string name="about_contact_info_title">Contact Info</string>
    <string name="official_website_prompt">Official Website:</string>
    <string name="official_website_text">metamanager.com</string>
    <string name="support_phone_number">Support Phone Number:</string>
    <string name="support_phone_number_text">(555) 123–4567</string>
    <string name="support_email">Support Email:</string>
    <string name="support_email_text">help@metamanager.com</string>
    <string name="about_open_source_licenses_title">Atributions</string>
    <string name="about_description_title">Description</string>
    <string name="description_text">
        MetaManager is a collection of proven metagame user choices that provide an optimal path to
        success that solely relies on user skill rather than below optimal user choices, for
        multiple games.
    </string>
    <string name="default_text">Default Text</string>
    <string name="game_list_image_desc">Icon of a game.</string>
    <string name="top_lane_image_desc">Image of top lane role</string>
    <string name="jungle_lane_image_desc">Image of jungle role</string>
    <string name="mid_lane_image_desc">Image of mid role</string>
    <string name="support_lane_image_desc">Image of support role</string>
    <string name="bot_lane_image_desc">Image of bot lane role</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keystone_description">An image of a keystone</string>
    <string name="todo">TODO</string>
    <string name="view">View</string>
    <string name="import_stmt">Import</string>
    <string name="create">Create</string>
    <string name="championThumbnailDescription">Thumbnail of Champion</string>
    <string name="summaryDefaultChampionName">Champion</string>
    <string name="summaryDefaultBuildName">My Awesome Build Name That Is Too Long</string>
    <string name="itemListItemDescription">One of 6 items in a build</string>
    <string name="addButtonDescription">Button to add a new build</string>

</resources>
