<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/hamburger_home"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_home" />
    <item
        android:id="@+id/hamburger_search"
        android:icon="@drawable/ic_search"
        android:title="@string/navigation_search"/>
    <item
        android:id="@+id/hamburger_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/navigation_favorites"/>
    <item
        android:id="@+id/hamburger_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/navigation_settings"/>
    <item
        android:id="@+id/hamburger_tutorial"
        android:icon="@drawable/ic_baby_carriage"
        android:title="@string/navigation_tutorial"/>
    <item
        android:id="@+id/hamburger_about"
        android:icon="@drawable/ic_info"
        android:title="@string/navigation_about" />
</menu>