<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:theme="@style/RoleSelection"
    tools:context=".screen_activities.ActivityRole">

    <!-- TODO: Make a weighted layout so things don't get squished. -->

    <ImageView
        android:id="@+id/topRoleButton"
        android:layout_width="292dp"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/top_lane_image_desc"
        android:theme="@style/RoleSelection.Role"
        app:layout_constraintBottom_toTopOf="@+id/jungleRoleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:srcCompat="@drawable/icon_top" />

    <ImageView
        android:id="@+id/jungleRoleButton"
        android:layout_width="292dp"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/jungle_lane_image_desc"
        android:theme="@style/RoleSelection.Role"
        app:layout_constraintBottom_toTopOf="@+id/midRoleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topRoleButton"
        app:srcCompat="@drawable/icon_jungle" />

    <ImageView
        android:id="@+id/midRoleButton"
        android:layout_width="292dp"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/mid_lane_image_desc"
        android:theme="@style/RoleSelection.Role"
        app:layout_constraintBottom_toTopOf="@+id/supportRoleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jungleRoleButton"
        app:srcCompat="@drawable/icon_mid" />

    <ImageView
        android:id="@+id/supportRoleButton"
        android:layout_width="292dp"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/support_lane_image_desc"
        android:theme="@style/RoleSelection.Role"
        app:layout_constraintBottom_toTopOf="@+id/botRoleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midRoleButton"
        app:srcCompat="@drawable/icon_support" />

    <ImageView
        android:id="@+id/botRoleButton"
        android:layout_width="292dp"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/bot_lane_image_desc"
        android:theme="@style/RoleSelection.Role"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportRoleButton"
        app:srcCompat="@drawable/icon_bot" />

</androidx.constraintlayout.widget.ConstraintLayout>